adding footer and location component

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,6 +6,8 @@
 @import 'components/buttons';
 @import 'components/UnitCard';
 @import 'components/OwnerCard';
+@import 'components/LocationComponent';
+@import 'components/FormControls';
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/Sidebar';
