--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,6 +49,10 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 
+.btn__small {
+  width: 150px;
+}
+
 .UnitCard {
   width: 100%;
   display: flex;
@@ -127,6 +131,62 @@ h1, h2, h3, h4, h5, h6 {
 .owner__card img:hover {
   box-shadow: 0 0 25px 0px rgba(0, 0, 0, 0.2156862745);
   scale: 1.01;
+}
+
+.inpt__sec {
+  outline: none;
+  border: none;
+  width: 270px;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid #8d8d8d;
+  padding: 0 10px;
+  cursor: text;
+  margin-bottom: 10px;
+}
+.inpt__sec:focus {
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
+}
+
+footer {
+  background-color: #f9f9f9;
+  color: #091638;
+  padding: 20px 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 18px;
+  box-shadow: 0px -2px 5px 0px rgba(0, 0, 0, 0.1);
+}
+footer div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+footer div h4 {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 10px;
+}
+
+.footer__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.footer__list li a {
+  color: #091638;
+  text-decoration: none;
+}
+.footer__list li a:hover {
+  color: #1c3988;
+}
+
+.store__logo {
+  width: 150px;
+  height: auto;
+  cursor: pointer;
 }
 
 .sidebar {
