--- a/src/styles/components/_FormControls.scss
+++ b/src/styles/components/_FormControls.scss
@@ -4,11 +4,23 @@
     width: 270px;
     height: 40px;
     border-radius: 5px;
-    border: 1px solid #8d8d8d;
+    border: 1px solid #8d8d8d44;
     padding: 0 10px;
     cursor: text;
     margin-bottom: 10px;
     &:focus{
         box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.1);
+    }
+}
+
+.search__input{
+    width: 200px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #8d8d8d44;
+    padding: 0 10px;
+    &:focus{
+        box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.1);
+        outline: none;
     }
 }
