--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -139,13 +139,25 @@ h1, h2, h3, h4, h5, h6 {
   width: 270px;
   height: 40px;
   border-radius: 5px;
-  border: 1px solid #8d8d8d;
+  border: 1px solid rgba(141, 141, 141, 0.2666666667);
   padding: 0 10px;
   cursor: text;
   margin-bottom: 10px;
 }
 .inpt__sec:focus {
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
+}
+
+.search__input {
+  width: 200px;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid rgba(141, 141, 141, 0.2666666667);
+  padding: 0 10px;
+}
+.search__input:focus {
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
+  outline: none;
 }
 
 footer {
@@ -185,7 +197,7 @@ footer div h4 {
 
 .store__logo {
   width: 150px;
-  height: auto;
+  height: 45px;
   cursor: pointer;
 }
 
@@ -199,6 +211,4 @@ footer div h4 {
 
 body {
   background-color: #f3f3fa;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
