--- a/src/styles/components/_OwnerCard.scss
+++ b/src/styles/components/_OwnerCard.scss
@@ -1,4 +1,4 @@
-.owner__card{
+.Owner__card{
     width: 100%;
     @include flex;
     flex-direction: column;
@@ -6,4 +6,40 @@
     border-radius: 10px;
     background-color: white;
     box-shadow: 0 0 25px 0px #00000025;
+
+    h3{
+        text-align: center;
+    }
+}
+
+.Owner__details{
+    width: 100%;
+    @include flex;
+    flex-direction: column;
+
+    &__wrapper{
+        width:80%;
+        @include flex;
+        flex-direction: row;
+        justify-content:flex-start;
+    }
+    .Owner__details--image{
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+    }
+    .Owner__details--Name{
+        font-size: 20px;
+        text-align: center;
+        
+        .Owner__details--title{
+            display: block;
+        }
+    }
+}
+.Owner__details--Contact{
+    width: 100%;
+    @include flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
