--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -110,9 +110,8 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 5px;
 }
 
-.owner__card {
+.Owner__card {
   width: 100%;
-  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -122,15 +121,45 @@ h1, h2, h3, h4, h5, h6 {
   background-color: white;
   box-shadow: 0 0 25px 0px rgba(0, 0, 0, 0.1450980392);
 }
-
-.owner__card img {
-  border-radius: 10px;
-  cursor: pointer;
-  transition: all 0.5s;
+.Owner__card h3 {
+  text-align: center;
 }
-.owner__card img:hover {
-  box-shadow: 0 0 25px 0px rgba(0, 0, 0, 0.2156862745);
-  scale: 1.01;
+
+.Owner__details {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.Owner__details__wrapper {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.Owner__details .Owner__details--image {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+.Owner__details .Owner__details--Name {
+  font-size: 20px;
+  text-align: center;
+}
+.Owner__details .Owner__details--Name .Owner__details--title {
+  display: block;
+}
+
+.Owner__details--Contact {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .inpt__sec {
@@ -211,4 +240,6 @@ footer div h4 {
 
 body {
   background-color: #f3f3fa;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
